--- a/app/src/main/res/layout/content_all_albums.xml
+++ b/app/src/main/res/layout/content_all_albums.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop = "5dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.team9.flashbackmusic_team9.AllAlbumsActivity"
     tools:showIn="@layout/activity_all_albums">
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="All Albums"
         android:textSize="25dp"
-        android:layout_marginBottom="450dp"
+        android:layout_marginBottom = "515dp"
         android:layout_marginLeft="0dp"
         android:textColor="#ff0000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +28,7 @@
         android:layout_height="wrap_content"
         android:text="All Tracks"
         android:textSize="20dp"
-        android:layout_marginBottom="450dp"
+        android:layout_marginBottom="515dp"
         android:layout_marginRight="250dp"
         android:textColor="#ff0000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +42,7 @@
         android:layout_height="wrap_content"
         android:text="Flashback"
         android:textSize="20dp"
-        android:layout_marginBottom="450dp"
+        android:layout_marginBottom="510dp"
         android:layout_marginLeft="250dp"
         android:textColor="#ff0000"
         app:layout_constraintBottom_toBottomOf="parent"
