--- a/app/src/main/res/layout/content_flash_back.xml
+++ b/app/src/main/res/layout/content_flash_back.xml
@@ -10,13 +10,15 @@
 
     <Button
         android:id="@+id/viewPlaylist"
-        android:layout_marginLeft="120dp"
+        android:layout_marginTop = "15dp"
+        android:layout_marginLeft="150dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View Playlist" />
 
     <Button
         android:id = "@+id/back"
+        android:layout_marginTop = "15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text = "BACK"/>
@@ -28,6 +30,7 @@
         android:scaleType="fitXY"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop = "25dp"
         android:minHeight="10dp"
         android:minWidth="10dp"
         android:clickable="true"
@@ -61,7 +64,7 @@
         android:ellipsize="marquee"
         android:singleLine="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -69,7 +72,7 @@
         android:id = "@+id/album"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop = "10dp"
+        android:layout_marginTop = "20dp"
         android:layout_centerHorizontal="true"
         android:text = "Album"
         android:ellipsize="marquee"
@@ -81,35 +84,47 @@
         android:id = "@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop = "50dp"
+        android:layout_marginTop = "20dp"
         android:layout_centerHorizontal="true"
         android:text = "Location"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:textSize = "30sp"
-        android:layout_below="@id/artist"/>
+        android:layout_below="@id/album"/>
 
     <TextView
         android:id = "@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop = "100dp"
+        android:layout_marginTop = "20dp"
         android:layout_centerHorizontal="true"
         android:text = "Time"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:textSize = "30sp"
-        android:layout_below="@id/artist"/>
+        android:layout_below="@id/location"/>
 
+    <TextView
+        android:id = "@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below = "@id/time"
+        android:text = "User Name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop = "20dp"
+        android:textSize = "30sp"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        />
 
     <ImageButton
         android:id = "@+id/prevButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_below="@id/location"
-        android:layout_marginTop = "120dp"
+        android:layout_below="@id/username"
+        android:layout_marginTop = "40dp"
         android:scaleType="fitXY"
-        android:layout_marginLeft = "15dp"
+        android:layout_marginLeft = "30dp"
         android:background="@drawable/previous" />
 
     <ImageButton
@@ -117,8 +132,8 @@
         android:layout_toRightOf="@id/prevButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_below = "@id/location"
-        android:layout_marginTop = "120dp"
+        android:layout_below = "@id/username"
+        android:layout_marginTop = "40dp"
         android:layout_marginLeft = "60dp"
         android:scaleType="fitXY"
         android:background="@drawable/play"/>
@@ -128,8 +143,8 @@
         android:layout_toRightOf="@id/play_pause_button"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_below = "@id/location"
-        android:layout_marginTop = "120dp"
+        android:layout_below = "@id/username"
+        android:layout_marginTop = "40dp"
         android:layout_marginLeft = "60dp"
         android:scaleType="fitXY"
         android:background="@drawable/next"/>
