--- a/app/src/main/res/layout/content_playing.xml
+++ b/app/src/main/res/layout/content_playing.xml
@@ -9,7 +9,8 @@
     tools:showIn="@layout/activity_playing">
     <Button
         android:id="@+id/viewPlaylist"
-        android:layout_marginLeft="120dp"
+        android:layout_marginTop = "15dp"
+        android:layout_marginLeft="150dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View Playlist" />
@@ -17,6 +18,7 @@
 
     <Button
         android:id = "@+id/back"
+        android:layout_marginTop = "15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text = "BACK"/>
@@ -26,6 +28,8 @@
         android:id="@+id/likeButton"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_marginTop = "25dp"
+        android:layout_marginRight = "10dp"
         android:scaleType="fitXY"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
@@ -65,7 +69,7 @@
         android:ellipsize="marquee"
         android:singleLine="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -74,7 +78,7 @@
         android:id = "@+id/album"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop = "10dp"
+        android:layout_marginTop = "20dp"
         android:layout_centerHorizontal="true"
         android:text = "Album"
         android:ellipsize="marquee"
@@ -87,36 +91,47 @@
         android:id = "@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop = "50dp"
+        android:layout_below = "@id/album"
+        android:layout_marginTop = "20dp"
         android:layout_centerHorizontal="true"
         android:text = "Location"
         android:ellipsize="marquee"
         android:singleLine="true"
-        android:textSize = "30sp"
-        android:layout_below="@id/artist"/>
+        android:textSize = "30sp" />
 
 
     <TextView
         android:id = "@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop = "100dp"
+        android:layout_marginTop = "20dp"
         android:layout_centerHorizontal="true"
         android:text = "Time"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:textSize = "30sp"
-        android:layout_below="@id/artist"/>
+        android:layout_below="@id/location"/>
 
+    <TextView
+        android:id = "@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal = "true"
+        android:text = "User Name"
+        android:ellipsize = "marquee"
+        android:singleLine = "true"
+        android:textSize = "30sp"
+        android:layout_below = "@id/time"
+        android:layout_marginTop = "20dp"/>
 
     <ImageButton
         android:id = "@+id/prevButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_below="@id/location"
-        android:layout_marginTop = "120dp"
+        android:layout_below="@id/username"
+        android:layout_marginTop = "40dp"
         android:scaleType="fitXY"
-        android:layout_marginLeft = "15dp"
+        android:layout_marginLeft = "30dp"
         android:background="@drawable/previous" />
 
 
@@ -125,8 +140,8 @@
         android:layout_toRightOf="@id/prevButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_below = "@id/location"
-        android:layout_marginTop = "120dp"
+        android:layout_below = "@id/username"
+        android:layout_marginTop = "40dp"
         android:layout_marginLeft = "60dp"
         android:scaleType="fitXY"
         android:background="@drawable/play"/>
@@ -137,8 +152,8 @@
         android:layout_toRightOf="@id/play_pause_button"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_below = "@id/location"
-        android:layout_marginTop = "120dp"
+        android:layout_below = "@id/username"
+        android:layout_marginTop = "40dp"
         android:layout_marginLeft = "60dp"
         android:scaleType="fitXY"
         android:background="@drawable/next"/>
